--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "method-override": "^2.3.7",
     "modules": "^0.4.0",
     "mysql": "^2.13.0",
+    "path": "^0.12.7",
     "sequelize": "^3.30.2"
   },
   "devDependencies": {},
